# automake-for-c

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  Makefile.am  Makefile.in  config.h  configure  configure.ac  docker-compose.yml
include/: .gitignore  Makefile  Makefile.am  Makefile.in  print_hello.c  print_hello.h
src/: .gitignore  Makefile  Makefile.am  Makefile.in  main.c
