AC_INIT([hello], [0.0.1], [srivathsansudarsanan@outlook.com])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AC_PROG_CC
AC_PROG_RANLIB
AM_PROG_AR
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([
                 Makefile
                 include/Makefile
                 src/Makefile
                 ])
AC_OUTPUT
